# Tianshu-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README.zh.md  docker-compose.yml
.beads/: metadata.json
.claude/agents/: dashboard-e2e.md  example-writer.md  feature-implementer.md  planner.md  test-runner.md  worker.md
.github/workflows/: ci.yml
crates/workflow_engine/: Cargo.toml
crates/workflow_engine/src/: agent.rs  agent_context.rs  agent_workflow.rs  case.rs  compact.rs  context.rs  engine.rs  lib.rs  llm.rs  llm_resilient.rs  observe.rs  poll.rs  registry.rs  retry.rs  session.rs  spawn.rs  stage.rs  store.rs  token.rs  tool.rs  tool_loop.rs  workflow.rs
crates/workflow_engine/tests/: cleanup_integration.rs  context_spawn_tests.rs  context_tests.rs  integration_test.rs  llm_trait_tests.rs  observer_integration.rs  retry_tests.rs  session_state_tests.rs  session_tests.rs  spawn_tests.rs  store_tests.rs  token_tests.rs  tool_loop_tests.rs  tool_tests.rs
crates/workflow_engine_dashboard/: Cargo.toml
crates/workflow_engine_dashboard/src/: handlers.rs  lib.rs  metrics.rs  server.rs  types.rs
crates/workflow_engine_dashboard/src/assets/: index.html
crates/workflow_engine_dashboard/tests/: api_integration.rs
crates/workflow_engine_llm_openai/: Cargo.toml
crates/workflow_engine_llm_openai/src/: lib.rs  sse.rs  streaming.rs
crates/workflow_engine_llm_openai/tests/: openai_adapter_tests.rs  streaming_tests.rs
crates/workflow_engine_observe/: Cargo.toml
crates/workflow_engine_observe/src/: composite.rs  dataset.rs  jsonl.rs  lib.rs  memory.rs
crates/workflow_engine_observe/tests/: composite_tests.rs  dataset_tests.rs  jsonl_tests.rs  memory_tests.rs
crates/workflow_engine_postgres/: Cargo.toml
crates/workflow_engine_postgres/src/: agent_store.rs  case_store.rs  lib.rs  message_store.rs  pool.rs  session_store.rs  state_store.rs
crates/workflow_engine_postgres/tests/: postgres_store_tests.rs
docs/concepts/: INDEX.md  case.md  llm_abstraction.md  observability.md  registry.md  router_poll.md  scheduler.md  session.md  stage.md  store.md  tool_loop.md  workflow.md  workflow_context.md
examples/approval_workflow/: Cargo.toml
examples/approval_workflow/src/: lib.rs  main.rs
examples/approval_workflow/src/workflows/: approval.rs  mod.rs
examples/approval_workflow/tests/: approval_workflow_tests.rs
examples/calculator_agent/: Cargo.toml
examples/calculator_agent/src/: main.rs
examples/conversation_agent/: Cargo.toml
examples/conversation_agent/src/: lib.rs  main.rs
examples/conversation_agent/src/workflows/: conversation.rs  mod.rs
examples/conversation_agent/tests/: conversation_agent_tests.rs
examples/example_tools/: Cargo.toml
examples/example_tools/src/: lib.rs  list_directory.rs  read_file.rs  search_files.rs  shell_command.rs  tool.rs  write_file.rs
examples/multi_agent_swarm/: Cargo.toml
examples/multi_agent_swarm/src/: lib.rs  main.rs
examples/multi_agent_swarm/src/workflows/: leader.rs  mod.rs  worker.rs
examples/multi_agent_swarm/tests/: multi_agent_swarm_tests.rs
examples/plan_and_execute/: Cargo.toml
examples/plan_and_execute/src/: lib.rs  main.rs
examples/plan_and_execute/src/workflows/: mod.rs  plan_and_execute.rs
examples/plan_and_execute/tests/: plan_and_execute_tests.rs
examples/react_agent/: Cargo.toml
examples/react_agent/src/: lib.rs  main.rs
examples/react_agent/src/workflows/: mod.rs  react.rs
examples/react_agent/tests/: react_tests.rs
examples/tool_orchestration/: Cargo.toml
examples/tool_orchestration/src/: lib.rs  main.rs
examples/tool_orchestration/src/stages/: execute_concurrent.rs  execute_exclusive.rs  feed_results.rs  mod.rs  plan_tools.rs  synthesize.rs
examples/tool_orchestration/src/workflows/: mod.rs  orchestrator.rs
examples/tool_orchestration/tests/: tool_orchestration_tests.rs
migrations/: 001_create_wf_cases.sql  002_create_wf_state.sql  003_create_wf_sessions.sql  004_create_wf_session_state.sql  005_create_wf_agents.sql  006_create_wf_agent_messages.sql
tests/: e2e_dashboard.mjs
