[workspace]
members = [
    "crates/workflow_engine",
    "crates/workflow_engine_postgres",
    "crates/workflow_engine_llm_openai",
    "crates/workflow_engine_observe",
    "crates/workflow_engine_dashboard",
    "examples/approval_workflow",
    "examples/calculator_agent",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# HTTP server (dashboard)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Test utilities
tempfile = "3"

# Utilities
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
