[package]
name = "workflow_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
