[package]
name = "workflow_engine"
version = "0.1.0"
edition = "2021"
description = "Async Rust workflow engine — define workflows as trait implementations and run them on a pluggable scheduler"
license = "Apache-2.0"
repository = "https://github.com/Desicool/Tianshu-rs"
homepage = "https://github.com/Desicool/Tianshu-rs"
documentation = "https://docs.rs/workflow_engine"
keywords = ["workflow", "async", "llm", "orchestration", "scheduler"]
categories = ["asynchronous", "concurrency"]
readme = "../../README.md"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
