[package]
name = "tianshu-dashboard"
version = "0.1.0"
edition = "2021"
description = "Built-in HTTP dashboard for the Tianshu workflow engine"
license = "Apache-2.0"
repository = "https://github.com/Desicool/Tianshu-rs"
homepage = "https://github.com/Desicool/Tianshu-rs"
documentation = "https://docs.rs/tianshu-dashboard"
keywords = ["workflow", "dashboard", "observability", "async", "orchestration"]
categories = ["asynchronous", "web-programming"]
readme = "../../README.md"

[dependencies]
tianshu = { package = "tianshu", path = "../workflow_engine", version = "0.1.0" }
tianshu-observe = { package = "tianshu-observe", path = "../workflow_engine_observe", version = "0.1.0" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
