[package]
name = "tianshu-llm-openai"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible LlmProvider adapter for workflow-engine"
license = "Apache-2.0"
repository = "https://github.com/Desicool/Tianshu-rs"
homepage = "https://github.com/Desicool/Tianshu-rs"
documentation = "https://docs.rs/tianshu-llm-openai"
keywords = ["workflow", "openai", "llm", "async", "orchestration"]
categories = ["asynchronous", "concurrency"]
readme = "../../README.md"

[dependencies]
tianshu = { package = "tianshu", path = "../workflow_engine", version = "0.1.0" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
