[package]
name = "tianshu-observe"
version = "0.1.0"
edition = "2021"
description = "Observer implementations for the Tianshu workflow engine"
license = "Apache-2.0"
repository = "https://github.com/Desicool/Tianshu-rs"
homepage = "https://github.com/Desicool/Tianshu-rs"
documentation = "https://docs.rs/tianshu-observe"
keywords = ["workflow", "observability", "tracing", "async", "orchestration"]
categories = ["asynchronous", "development-tools"]
readme = "../../README.md"

[dependencies]
tianshu = { package = "tianshu", path = "../workflow_engine", version = "0.1.0" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
