[package]
name = "workflow_engine_postgres"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL CaseStore + StateStore adapter for workflow-engine"
license = "Apache-2.0"
repository = "https://github.com/Desicool/Tianshu-rs"
homepage = "https://github.com/Desicool/Tianshu-rs"
documentation = "https://docs.rs/workflow_engine_postgres"
keywords = ["workflow", "postgres", "database", "async", "orchestration"]
categories = ["asynchronous", "database"]
readme = "../../README.md"

[dependencies]
workflow_engine = { path = "../workflow_engine", version = "0.1.0" }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
native-tls = "0.2"
tokio-native-tls = "0.3"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
