[package]
name = "approval_workflow"
version = "0.1.0"
edition = "2021"
description = "Approval workflow example demonstrating workflow-engine features"

[[bin]]
name = "approval_workflow"
path = "src/main.rs"

[dependencies]
workflow_engine = { path = "../../crates/workflow_engine" }
workflow_engine_llm_openai = { path = "../../crates/workflow_engine_llm_openai" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
