[package]
name = "approval_workflow"
version = "0.1.0"
edition = "2021"
description = "Approval workflow example demonstrating workflow-engine features"

[[bin]]
name = "approval_workflow"
path = "src/main.rs"

[dependencies]
workflow_engine = { path = "../../crates/workflow_engine" }
workflow_engine_llm_openai = { path = "../../crates/workflow_engine_llm_openai" }
workflow_engine_observe = { path = "../../crates/workflow_engine_observe" }
workflow_engine_postgres = { path = "../../crates/workflow_engine_postgres", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
postgres = ["workflow_engine_postgres"]

[dev-dependencies]
tokio = { workspace = true }
