[package]
name = "approval_workflow"
version = "0.1.0"
edition = "2021"
description = "Approval workflow example demonstrating workflow-engine features"

[[bin]]
name = "approval_workflow"
path = "src/main.rs"

[dependencies]
tianshu = { package = "tianshu", path = "../../crates/workflow_engine" }
tianshu-llm-openai = { package = "tianshu-llm-openai", path = "../../crates/workflow_engine_llm_openai" }
tianshu-observe = { package = "tianshu-observe", path = "../../crates/workflow_engine_observe" }
tianshu-postgres = { package = "tianshu-postgres", path = "../../crates/workflow_engine_postgres", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
postgres = ["tianshu-postgres"]

[dev-dependencies]
tokio = { workspace = true }
