[package]
name = "calculator_agent"
version = "0.1.0"
edition = "2021"
description = "Calculator agent example demonstrating the agent-first architecture (Phase 4)"

[[bin]]
name = "calculator_agent"
path = "src/main.rs"

[dependencies]
tianshu = { package = "tianshu", path = "../../crates/workflow_engine" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
