[package]
name = "multi_agent_swarm"
version = "0.1.0"
edition = "2021"
description = "Multi-agent swarm example demonstrating multi-case session coordination"

[[bin]]
name = "multi_agent_swarm"
path = "src/main.rs"

[dependencies]
workflow_engine = { path = "../../crates/workflow_engine" }
workflow_engine_llm_openai = { path = "../../crates/workflow_engine_llm_openai" }
example_tools = { path = "../example_tools" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
